<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.chrondule.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.chrondule.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.chrondule.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_administrator"
        android:name="com.example.chrondule.ui.Administrator_Dashboard"
        android:label="@string/Administrator"
        tools:layout="@layout/fragment_administrator__dashboard"/>

    <fragment
        android:id="@+id/nav_student"
        android:name="com.example.chrondule.ui.Student_Dashboard"
        android:label="@string/Student"
        tools:layout="@layout/fragment_student__dashboard"/>
</navigation>